Bug 1705765 - Fix regression to allow creation and rename of imap folders containing ascii ampersand. r=benc